src/objects/Apttus_Config2__ConfigLineItemCustomFields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds the list of field API names from the line item object used in pricing callbacks</description>
    <fields>
        <fullName>Apttus_Config2__CustomFieldNames2__c</fullName>
        <description>Enter the list of field API names from the line item object used in pricing callbacks. Each field may be separated by a comma or a new line.</description>
        <inlineHelpText>Enter the list of field API names from the line item object used in pricing callbacks. Each field may be separated by a comma or a new line.</inlineHelpText>
        <label>Custom Field Names 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CustomFieldNames3__c</fullName>
        <description>Enter the list of field API names from the line item object used in limit processing in incentive pricing. Each field may be separated by a comma or a new line.</description>
        <inlineHelpText>Enter the list of field API names from the line item object used in limit processing in incentive pricing. Each field may be separated by a comma or a new line.</inlineHelpText>
        <label>Custom Field Names 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CustomFieldNames4__c</fullName>
        <description>Enter the list of field API names from the line item object used in pricing callbacks. Each field may be separated by a comma or a new line.</description>
        <inlineHelpText>Enter the list of field API names from the line item object used in pricing callbacks. Each field may be separated by a comma or a new line.</inlineHelpText>
        <label>Custom Field Names 4</label>
        <type>TextArea</type>
    </fields>
    <label>Config LineItem Custom Fields</label>
</CustomObject>